# Thermostat

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
Pi/: .coverage  config.json  interactive_calibration.py  main.py  requirements.txt  server.py  servo.py  servo_control.py  setupdb.py
Pi/routes/: configuration.py  daily_schedule.py  data.py  servo.py
Pi/tests/: conftest.py  test_get_configuration.py  test_get_daily_schedule.py  test_get_data.py  test_post_configuration.py  test_post_daily_schedule.py  test_post_data.py
Pico/: client.py  client_config.json  flash_client.sh  log.txt  network_config.json  reset_log.sh  temp_print.py
